<?xml version="1.0"?>
<package>
  <name>mongodb_log</name>
  <version>0.3.6</version>
  <description>The mongodb_log package</description>

  <author email="tim@niemueller.de">Tim Niemueller</author>
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <license>GPLv2</license>
  <url type="website">http://ros.org/wiki/mongodb_log</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libmongocxx_ros</build_depend>
  <build_depend>libssl-dev</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>designator_integration_cpp</build_depend>
  <build_depend>designator_integration_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rostopic</run_depend>  
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libmongocxx_ros</run_depend>
  <run_depend>python-pymongo</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>designator_integration_cpp</run_depend>
  <run_depend>designator_integration_msgs</run_depend>

  <export>
  </export>
</package>
